examples/good/02-artihmetic.tx
fun main(): Void {
  printInt(4 + 2);
  printInt(4 - 2);
  printInt(4 * 2);
  printInt(4 / 2);
  printInt(4 % 2);

  return;
}
