examples/bad/02-application.tx
fun illegalFun(var x: Int): Int {
    return x;
}

fun main(): Void {
    illegalFun(2);
    return;
}